parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> axiom
Rule 1     axiom -> OPEN_DELIMITER element CLOSE_DELIMITER
Rule 2     axiom -> empty
Rule 3     element -> stringvalue next_element
Rule 4     element -> empty
Rule 5     next_element -> COMMA element
Rule 6     next_element -> empty
Rule 7     stringvalue -> string COLON value
Rule 8     string -> QUOTED_STRING
Rule 9     string -> UNQUOTED_STRING
Rule 10    value -> number
Rule 11    value -> QUOTED_STRING
Rule 12    value -> BOOLEAN
Rule 13    value -> operation
Rule 14    value -> NULL
Rule 15    value -> nested_element
Rule 16    nested_element -> OPEN_DELIMITER element CLOSE_DELIMITER
Rule 17    number -> INT
Rule 18    number -> FLOAT
Rule 19    number -> BINARY
Rule 20    number -> OCTAL
Rule 21    number -> HEXADECIMAL
Rule 22    operation -> equal_operation
Rule 23    operation -> greater_operation
Rule 24    operation -> greater_or_equal_operation
Rule 25    operation -> less_operation
Rule 26    operation -> less_or_equal_operation
Rule 27    equal_operation -> number EQUAL number
Rule 28    greater_operation -> number GREATER number
Rule 29    greater_or_equal_operation -> number GREATER_OR_EQUAL number
Rule 30    less_operation -> number LESS number
Rule 31    less_or_equal_operation -> number LESS_OR_EQUAL number
Rule 32    empty -> <empty>

Terminals, with rules where they appear

BINARY               : 19
BOOLEAN              : 12
CLOSE_DELIMITER      : 1 16
COLON                : 7
COMMA                : 5
EQUAL                : 27
FLOAT                : 18
GREATER              : 28
GREATER_OR_EQUAL     : 29
HEXADECIMAL          : 21
INT                  : 17
LESS                 : 30
LESS_OR_EQUAL        : 31
NULL                 : 14
OCTAL                : 20
OPEN_DELIMITER       : 1 16
QUOTED_STRING        : 8 11
UNQUOTED_STRING      : 9
error                : 

Nonterminals, with rules where they appear

axiom                : 0
element              : 1 5 16
empty                : 2 4 6
equal_operation      : 22
greater_operation    : 23
greater_or_equal_operation : 24
less_operation       : 25
less_or_equal_operation : 26
nested_element       : 15
next_element         : 3
number               : 10 27 27 28 28 29 29 30 30 31 31
operation            : 13
string               : 7
stringvalue          : 3
value                : 7

Parsing method: LALR

state 0

    (0) S' -> . axiom
    (1) axiom -> . OPEN_DELIMITER element CLOSE_DELIMITER
    (2) axiom -> . empty
    (32) empty -> .

    OPEN_DELIMITER  shift and go to state 2
    $end            reduce using rule 32 (empty -> .)

    axiom                          shift and go to state 1
    empty                          shift and go to state 3

state 1

    (0) S' -> axiom .



state 2

    (1) axiom -> OPEN_DELIMITER . element CLOSE_DELIMITER
    (3) element -> . stringvalue next_element
    (4) element -> . empty
    (7) stringvalue -> . string COLON value
    (32) empty -> .
    (8) string -> . QUOTED_STRING
    (9) string -> . UNQUOTED_STRING

    CLOSE_DELIMITER reduce using rule 32 (empty -> .)
    QUOTED_STRING   shift and go to state 8
    UNQUOTED_STRING shift and go to state 9

    element                        shift and go to state 4
    stringvalue                    shift and go to state 5
    empty                          shift and go to state 6
    string                         shift and go to state 7

state 3

    (2) axiom -> empty .

    $end            reduce using rule 2 (axiom -> empty .)


state 4

    (1) axiom -> OPEN_DELIMITER element . CLOSE_DELIMITER

    CLOSE_DELIMITER shift and go to state 10


state 5

    (3) element -> stringvalue . next_element
    (5) next_element -> . COMMA element
    (6) next_element -> . empty
    (32) empty -> .

    COMMA           shift and go to state 12
    CLOSE_DELIMITER reduce using rule 32 (empty -> .)

    next_element                   shift and go to state 11
    empty                          shift and go to state 13

state 6

    (4) element -> empty .

    CLOSE_DELIMITER reduce using rule 4 (element -> empty .)


state 7

    (7) stringvalue -> string . COLON value

    COLON           shift and go to state 14


state 8

    (8) string -> QUOTED_STRING .

    COLON           reduce using rule 8 (string -> QUOTED_STRING .)


state 9

    (9) string -> UNQUOTED_STRING .

    COLON           reduce using rule 9 (string -> UNQUOTED_STRING .)


state 10

    (1) axiom -> OPEN_DELIMITER element CLOSE_DELIMITER .

    $end            reduce using rule 1 (axiom -> OPEN_DELIMITER element CLOSE_DELIMITER .)


state 11

    (3) element -> stringvalue next_element .

    CLOSE_DELIMITER reduce using rule 3 (element -> stringvalue next_element .)


state 12

    (5) next_element -> COMMA . element
    (3) element -> . stringvalue next_element
    (4) element -> . empty
    (7) stringvalue -> . string COLON value
    (32) empty -> .
    (8) string -> . QUOTED_STRING
    (9) string -> . UNQUOTED_STRING

    CLOSE_DELIMITER reduce using rule 32 (empty -> .)
    QUOTED_STRING   shift and go to state 8
    UNQUOTED_STRING shift and go to state 9

    element                        shift and go to state 15
    stringvalue                    shift and go to state 5
    empty                          shift and go to state 6
    string                         shift and go to state 7

state 13

    (6) next_element -> empty .

    CLOSE_DELIMITER reduce using rule 6 (next_element -> empty .)


state 14

    (7) stringvalue -> string COLON . value
    (10) value -> . number
    (11) value -> . QUOTED_STRING
    (12) value -> . BOOLEAN
    (13) value -> . operation
    (14) value -> . NULL
    (15) value -> . nested_element
    (17) number -> . INT
    (18) number -> . FLOAT
    (19) number -> . BINARY
    (20) number -> . OCTAL
    (21) number -> . HEXADECIMAL
    (22) operation -> . equal_operation
    (23) operation -> . greater_operation
    (24) operation -> . greater_or_equal_operation
    (25) operation -> . less_operation
    (26) operation -> . less_or_equal_operation
    (16) nested_element -> . OPEN_DELIMITER element CLOSE_DELIMITER
    (27) equal_operation -> . number EQUAL number
    (28) greater_operation -> . number GREATER number
    (29) greater_or_equal_operation -> . number GREATER_OR_EQUAL number
    (30) less_operation -> . number LESS number
    (31) less_or_equal_operation -> . number LESS_OR_EQUAL number

    QUOTED_STRING   shift and go to state 18
    BOOLEAN         shift and go to state 19
    NULL            shift and go to state 21
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BINARY          shift and go to state 25
    OCTAL           shift and go to state 26
    HEXADECIMAL     shift and go to state 27
    OPEN_DELIMITER  shift and go to state 33

    value                          shift and go to state 16
    number                         shift and go to state 17
    operation                      shift and go to state 20
    nested_element                 shift and go to state 22
    equal_operation                shift and go to state 28
    greater_operation              shift and go to state 29
    greater_or_equal_operation     shift and go to state 30
    less_operation                 shift and go to state 31
    less_or_equal_operation        shift and go to state 32

state 15

    (5) next_element -> COMMA element .

    CLOSE_DELIMITER reduce using rule 5 (next_element -> COMMA element .)


state 16

    (7) stringvalue -> string COLON value .

    COMMA           reduce using rule 7 (stringvalue -> string COLON value .)
    CLOSE_DELIMITER reduce using rule 7 (stringvalue -> string COLON value .)


state 17

    (10) value -> number .
    (27) equal_operation -> number . EQUAL number
    (28) greater_operation -> number . GREATER number
    (29) greater_or_equal_operation -> number . GREATER_OR_EQUAL number
    (30) less_operation -> number . LESS number
    (31) less_or_equal_operation -> number . LESS_OR_EQUAL number

    COMMA           reduce using rule 10 (value -> number .)
    CLOSE_DELIMITER reduce using rule 10 (value -> number .)
    EQUAL           shift and go to state 34
    GREATER         shift and go to state 35
    GREATER_OR_EQUAL shift and go to state 36
    LESS            shift and go to state 37
    LESS_OR_EQUAL   shift and go to state 38


state 18

    (11) value -> QUOTED_STRING .

    COMMA           reduce using rule 11 (value -> QUOTED_STRING .)
    CLOSE_DELIMITER reduce using rule 11 (value -> QUOTED_STRING .)


state 19

    (12) value -> BOOLEAN .

    COMMA           reduce using rule 12 (value -> BOOLEAN .)
    CLOSE_DELIMITER reduce using rule 12 (value -> BOOLEAN .)


state 20

    (13) value -> operation .

    COMMA           reduce using rule 13 (value -> operation .)
    CLOSE_DELIMITER reduce using rule 13 (value -> operation .)


state 21

    (14) value -> NULL .

    COMMA           reduce using rule 14 (value -> NULL .)
    CLOSE_DELIMITER reduce using rule 14 (value -> NULL .)


state 22

    (15) value -> nested_element .

    COMMA           reduce using rule 15 (value -> nested_element .)
    CLOSE_DELIMITER reduce using rule 15 (value -> nested_element .)


state 23

    (17) number -> INT .

    EQUAL           reduce using rule 17 (number -> INT .)
    GREATER         reduce using rule 17 (number -> INT .)
    GREATER_OR_EQUAL reduce using rule 17 (number -> INT .)
    LESS            reduce using rule 17 (number -> INT .)
    LESS_OR_EQUAL   reduce using rule 17 (number -> INT .)
    COMMA           reduce using rule 17 (number -> INT .)
    CLOSE_DELIMITER reduce using rule 17 (number -> INT .)


state 24

    (18) number -> FLOAT .

    EQUAL           reduce using rule 18 (number -> FLOAT .)
    GREATER         reduce using rule 18 (number -> FLOAT .)
    GREATER_OR_EQUAL reduce using rule 18 (number -> FLOAT .)
    LESS            reduce using rule 18 (number -> FLOAT .)
    LESS_OR_EQUAL   reduce using rule 18 (number -> FLOAT .)
    COMMA           reduce using rule 18 (number -> FLOAT .)
    CLOSE_DELIMITER reduce using rule 18 (number -> FLOAT .)


state 25

    (19) number -> BINARY .

    EQUAL           reduce using rule 19 (number -> BINARY .)
    GREATER         reduce using rule 19 (number -> BINARY .)
    GREATER_OR_EQUAL reduce using rule 19 (number -> BINARY .)
    LESS            reduce using rule 19 (number -> BINARY .)
    LESS_OR_EQUAL   reduce using rule 19 (number -> BINARY .)
    COMMA           reduce using rule 19 (number -> BINARY .)
    CLOSE_DELIMITER reduce using rule 19 (number -> BINARY .)


state 26

    (20) number -> OCTAL .

    EQUAL           reduce using rule 20 (number -> OCTAL .)
    GREATER         reduce using rule 20 (number -> OCTAL .)
    GREATER_OR_EQUAL reduce using rule 20 (number -> OCTAL .)
    LESS            reduce using rule 20 (number -> OCTAL .)
    LESS_OR_EQUAL   reduce using rule 20 (number -> OCTAL .)
    COMMA           reduce using rule 20 (number -> OCTAL .)
    CLOSE_DELIMITER reduce using rule 20 (number -> OCTAL .)


state 27

    (21) number -> HEXADECIMAL .

    EQUAL           reduce using rule 21 (number -> HEXADECIMAL .)
    GREATER         reduce using rule 21 (number -> HEXADECIMAL .)
    GREATER_OR_EQUAL reduce using rule 21 (number -> HEXADECIMAL .)
    LESS            reduce using rule 21 (number -> HEXADECIMAL .)
    LESS_OR_EQUAL   reduce using rule 21 (number -> HEXADECIMAL .)
    COMMA           reduce using rule 21 (number -> HEXADECIMAL .)
    CLOSE_DELIMITER reduce using rule 21 (number -> HEXADECIMAL .)


state 28

    (22) operation -> equal_operation .

    COMMA           reduce using rule 22 (operation -> equal_operation .)
    CLOSE_DELIMITER reduce using rule 22 (operation -> equal_operation .)


state 29

    (23) operation -> greater_operation .

    COMMA           reduce using rule 23 (operation -> greater_operation .)
    CLOSE_DELIMITER reduce using rule 23 (operation -> greater_operation .)


state 30

    (24) operation -> greater_or_equal_operation .

    COMMA           reduce using rule 24 (operation -> greater_or_equal_operation .)
    CLOSE_DELIMITER reduce using rule 24 (operation -> greater_or_equal_operation .)


state 31

    (25) operation -> less_operation .

    COMMA           reduce using rule 25 (operation -> less_operation .)
    CLOSE_DELIMITER reduce using rule 25 (operation -> less_operation .)


state 32

    (26) operation -> less_or_equal_operation .

    COMMA           reduce using rule 26 (operation -> less_or_equal_operation .)
    CLOSE_DELIMITER reduce using rule 26 (operation -> less_or_equal_operation .)


state 33

    (16) nested_element -> OPEN_DELIMITER . element CLOSE_DELIMITER
    (3) element -> . stringvalue next_element
    (4) element -> . empty
    (7) stringvalue -> . string COLON value
    (32) empty -> .
    (8) string -> . QUOTED_STRING
    (9) string -> . UNQUOTED_STRING

    CLOSE_DELIMITER reduce using rule 32 (empty -> .)
    QUOTED_STRING   shift and go to state 8
    UNQUOTED_STRING shift and go to state 9

    element                        shift and go to state 39
    stringvalue                    shift and go to state 5
    empty                          shift and go to state 6
    string                         shift and go to state 7

state 34

    (27) equal_operation -> number EQUAL . number
    (17) number -> . INT
    (18) number -> . FLOAT
    (19) number -> . BINARY
    (20) number -> . OCTAL
    (21) number -> . HEXADECIMAL

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BINARY          shift and go to state 25
    OCTAL           shift and go to state 26
    HEXADECIMAL     shift and go to state 27

    number                         shift and go to state 40

state 35

    (28) greater_operation -> number GREATER . number
    (17) number -> . INT
    (18) number -> . FLOAT
    (19) number -> . BINARY
    (20) number -> . OCTAL
    (21) number -> . HEXADECIMAL

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BINARY          shift and go to state 25
    OCTAL           shift and go to state 26
    HEXADECIMAL     shift and go to state 27

    number                         shift and go to state 41

state 36

    (29) greater_or_equal_operation -> number GREATER_OR_EQUAL . number
    (17) number -> . INT
    (18) number -> . FLOAT
    (19) number -> . BINARY
    (20) number -> . OCTAL
    (21) number -> . HEXADECIMAL

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BINARY          shift and go to state 25
    OCTAL           shift and go to state 26
    HEXADECIMAL     shift and go to state 27

    number                         shift and go to state 42

state 37

    (30) less_operation -> number LESS . number
    (17) number -> . INT
    (18) number -> . FLOAT
    (19) number -> . BINARY
    (20) number -> . OCTAL
    (21) number -> . HEXADECIMAL

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BINARY          shift and go to state 25
    OCTAL           shift and go to state 26
    HEXADECIMAL     shift and go to state 27

    number                         shift and go to state 43

state 38

    (31) less_or_equal_operation -> number LESS_OR_EQUAL . number
    (17) number -> . INT
    (18) number -> . FLOAT
    (19) number -> . BINARY
    (20) number -> . OCTAL
    (21) number -> . HEXADECIMAL

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BINARY          shift and go to state 25
    OCTAL           shift and go to state 26
    HEXADECIMAL     shift and go to state 27

    number                         shift and go to state 44

state 39

    (16) nested_element -> OPEN_DELIMITER element . CLOSE_DELIMITER

    CLOSE_DELIMITER shift and go to state 45


state 40

    (27) equal_operation -> number EQUAL number .

    COMMA           reduce using rule 27 (equal_operation -> number EQUAL number .)
    CLOSE_DELIMITER reduce using rule 27 (equal_operation -> number EQUAL number .)


state 41

    (28) greater_operation -> number GREATER number .

    COMMA           reduce using rule 28 (greater_operation -> number GREATER number .)
    CLOSE_DELIMITER reduce using rule 28 (greater_operation -> number GREATER number .)


state 42

    (29) greater_or_equal_operation -> number GREATER_OR_EQUAL number .

    COMMA           reduce using rule 29 (greater_or_equal_operation -> number GREATER_OR_EQUAL number .)
    CLOSE_DELIMITER reduce using rule 29 (greater_or_equal_operation -> number GREATER_OR_EQUAL number .)


state 43

    (30) less_operation -> number LESS number .

    COMMA           reduce using rule 30 (less_operation -> number LESS number .)
    CLOSE_DELIMITER reduce using rule 30 (less_operation -> number LESS number .)


state 44

    (31) less_or_equal_operation -> number LESS_OR_EQUAL number .

    COMMA           reduce using rule 31 (less_or_equal_operation -> number LESS_OR_EQUAL number .)
    CLOSE_DELIMITER reduce using rule 31 (less_or_equal_operation -> number LESS_OR_EQUAL number .)


state 45

    (16) nested_element -> OPEN_DELIMITER element CLOSE_DELIMITER .

    COMMA           reduce using rule 16 (nested_element -> OPEN_DELIMITER element CLOSE_DELIMITER .)
    CLOSE_DELIMITER reduce using rule 16 (nested_element -> OPEN_DELIMITER element CLOSE_DELIMITER .)

